--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,21 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-openssl": "*",
+        "fakerphp/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^4.2",
+        "laravel/octane": "^2.3",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "tightenco/ziggy": "^1.0",
-        "fakerphp/faker": "^1.9.1",
-        "ext-openssl": "*"
+        "spiral/roadrunner-cli": "^2.6.0",
+        "spiral/roadrunner-http": "^3.3.0",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
+        "brianium/paratest": "^7.4",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
