--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "copy-to-clipboard": "^3.3.3",
+        "primevue": "^3.47.2",
+        "vue-honeypot": "^3.0.1",
+        "vue-toast-notification": "^3.1.2"
     }
 }
