Update Octane installation in GitHub workflow
The Octane installation step in the GitHub actions workflow was modified to specify the 'roadrunner' server. This ensures that the correct server is used when running the workflow, optimizing the continuous integration environment.

--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -56,7 +56,7 @@ jobs:
         run: php artisan admin:create-admin-user "Admin User" "admin@example.com"
 
       - name: 'Install octane'
-        run: php artisan octane:install --no-interaction
+        run: php artisan octane:install --no-interaction --server=roadrunner
 
       - name: 'Start inertia SSR Server'
         run: php artisan inertia:start-ssr > /dev/null &
