Improve conditions for test execution in GitHub workflow
This commit refines the conditions under which the tests execute, by adding an 'id' to the tests and then checking specifically for their failure state. Consequently, the secondary test run only occurs if the primary test run fails, ensuring efficiency and accuracy in the testing process.

--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -62,8 +62,9 @@ jobs:
         run: php artisan inertia:start-ssr > /dev/null &
 
       - name: 'Execute tests'
+        id: tests
         run: php artisan test -p
 
       - name: 'Execute tests serially if parallel tests fail'
-        if: ${{ failure() }}
+        if: failure() && steps.tests.outcome == 'failure'
         run: php artisan test
