--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/server-renderer": "^3.2.31",
     "autoprefixer": "^10.4.7",
     "axios": "^1.6.4",
+    "dotenv": "^16.4.3",
     "laravel-vite-plugin": "^1.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.0",
