--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -15,8 +15,21 @@ env:
   PHP_VERSION: 8.3
 
 jobs:
+  prepare:
+    name: prepare
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Output env vars
+        id: env
+        run: |
+          echo "::set-output name=DOCKER_MYSQL_IMAGE_TAG::'${{ DOCKER_MYSQL_IMAGE_TAG }}'"
+          echo "::set-output name=NODE_VERSION::'${{ NODE_VERSION }}'"
+          echo "::set-output name=PHP_VERSION::'${{ PHP_VERSION }}'"
+
   build:
     name: build
+    needs: prepare
     runs-on: ubuntu-latest
 
     steps:
@@ -65,7 +78,7 @@ jobs:
 
     services:
       mysql:
-        image: ${{ env.DOCKER_MYSQL_IMAGE_TAG }}
+        image: ${{ needs.env.outputs.DOCKER_MYSQL_IMAGE_TAG }}
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: mmbd
@@ -104,7 +117,7 @@ jobs:
 
     services:
       mysql:
-        image: ${{ env.DOCKER_MYSQL_IMAGE_TAG }}
+        image: ${{ needs.env.outputs.DOCKER_MYSQL_IMAGE_TAG }}
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: mmbd
