--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -23,9 +23,9 @@ jobs:
       - name: Output env vars
         id: env
         run: |
-          echo "${{ env.DOCKER_MYSQL_IMAGE_TAG }}" >> "GITHUB_OUTPUT"
-          echo "${{ env.NODE_VERSION }}" >> "GITHUB_OUTPUT"
-          echo "${{ env.PHP_VERSION }}" >> "GITHUB_OUTPUT"
+          echo "DOCKER_MYSQL_IMAGE_TAG=${{ env.DOCKER_MYSQL_IMAGE_TAG }}" >> "GITHUB_OUTPUT"
+          echo "NODE_VERSION=${{ env.NODE_VERSION }}" >> "GITHUB_OUTPUT"
+          echo "PHP_VERSION=${{ env.PHP_VERSION }}" >> "GITHUB_OUTPUT"
 
   test:
     name: test
