--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -34,7 +34,7 @@ jobs:
 
     steps:
       - name: test
-        run: echo
+        run: echo $GITHUB_OUTPUT
       - name: test
         run: echo ${{ needs.prepare.outputs.DOCKER_MYSQL_IMAGE_TAG }}
 
