--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -73,6 +73,8 @@ jobs:
           - 3306:3306
 
     steps:
+      - uses: actions/checkout@v4
+
       - uses: actions/download-artifact@v4
 
       - name: 'Migrate database'
@@ -112,6 +114,8 @@ jobs:
           - 3306:3306
 
     steps:
+      - uses: actions/checkout@v4
+
       - uses: actions/download-artifact@v4
 
       - name: 'Start inertia SSR Server'
