--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -73,9 +73,12 @@ jobs:
           - 3306:3306
 
     steps:
-      - uses: actions/checkout@v4
+      # - uses: actions/checkout@v4
 
       - uses: actions/download-artifact@v4
+
+      - name: Display structure of downloaded files
+        run: ls -R
 
       - name: 'Migrate database'
         run: php artisan migrate --seed
