--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -88,7 +88,7 @@ jobs:
         run: mv installation_artifacts/{*,.[^.]*} ./ && rm -r installation_artifacts
 
       - name: Make files executable
-        run: find . -type f -iname "+(playwright|artisan)" -exec chmod +x {} \;
+        run: find . -type f -iname "**/+(playwright)" -exec chmod +x {} \;
 
       - name: Display structure of downloaded files
         run: ls -alh
@@ -140,6 +140,9 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ env.PHP_VERSION }}
+
+      - name: Move artifact files to current dir
+        run: mv installation_artifacts/{*,.[^.]*} ./ && rm -r installation_artifacts
 
       - name: 'Start inertia SSR Server'
         run: php artisan inertia:start-ssr > /dev/null &
