--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -31,7 +31,7 @@ jobs:
           - 3306:3306
 
     steps:
-      - uses: ../actions/setup
+      - uses: ./.github/actions/setup
 
       - name: Display structure of downloaded files
         run: ls -alh
@@ -73,7 +73,7 @@ jobs:
           - 3306:3306
 
     steps:
-      - uses: ../actions/setup
+      - uses: ./.github/actions/setup
 
       - name: Move artifact files to current dir
         run: mv installation_artifacts/{*,.[^.]*} ./ && rm -r installation_artifacts
