--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -51,6 +51,8 @@ jobs:
 
       - name: Run Playwright tests
         run: npx playwright test
+        env:
+          APP_URL: 'http://127.0.0.1:8000'
 
       - uses: actions/upload-artifact@v4
         if: always()
