--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -1,16 +1,20 @@
-name: 'Build and test'
+name: 'Build and test app'
+
 on:
-  push:
-    branches:
-      - staging
-      - dev
   pull_request:
     branches:
       - main
-      - staging
       - dev
+
+env:
+  NODE_VERSION: 21.6.1
+  PHP_VERSION: 8.3
+
 jobs:
-  build_and_test:
+
+  e2e_tests:
+    name: e2e_tests
+    timeout-minutes: 60
     runs-on: ubuntu-latest
 
     services:
@@ -25,38 +29,52 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '21.6.1'
+      - uses: ./.github/actions/setup
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.3'
-
-      - name: 'Install composer dependencies'
-        run: composer install
-
-      - name: 'Install npm dependencies'
-        run: npm ci
-
-      - name: 'Build frontend'
-        run: npm run build
-
-      - name: 'Create .env file'
-        run: cp .env.ci .env
-
-      - name: 'Generate laravel app key'
-        run: php artisan key:generate
+      - name: Install playwright
+        run: npx playwright install --with-deps
 
       - name: 'Migrate database'
         run: php artisan migrate --seed
 
-      - name: 'Generate admin users'
-        run: php artisan admin:create-admin-user "Admin User" "admin@example.com"
+      - name: 'Generate playwright test users'
+        run: php artisan playwright:create-users
 
-      - name: 'Install octane'
-        run: php artisan octane:install --no-interaction --server=roadrunner
+      - name: 'Start octane server'
+        run: php artisan octane:start > /dev/null &
+
+      - name: 'Start inertia SSR Server'
+        run: php artisan inertia:start-ssr > /dev/null &
+
+      - name: Run Playwright tests
+        run: npx playwright test
+        env:
+          APP_URL: 'http://127.0.0.1:8000'
+
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
+  php_test:
+    name: php_test
+    runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:8.3
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: mmbd
+        ports:
+          - 3306:3306
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: ./.github/actions/setup
 
       - name: 'Start inertia SSR Server'
         run: php artisan inertia:start-ssr > /dev/null &
