--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build && vite build --ssr"
-    },
-    "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.2",
-        "@vitejs/plugin-vue": "^4.5.0",
-        "@vue/server-renderer": "^3.2.31",
-        "autoprefixer": "^10.4.7",
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
-        "vite": "^5.0.0",
-        "vue": "^3.2.31"
-    },
-    "dependencies": {
-        "copy-to-clipboard": "^3.3.3",
-        "primevue": "^3.47.2",
-        "vue-honeypot": "^3.0.1",
-        "vue-toast-notification": "^3.1.2"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build && vite build --ssr"
+  },
+  "devDependencies": {
+    "@inertiajs/vue3": "^1.0.0",
+    "@playwright/test": "^1.41.2",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/node": "^20.11.17",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "@vue/server-renderer": "^3.2.31",
+    "autoprefixer": "^10.4.7",
+    "axios": "^1.6.4",
+    "dotenv": "^16.4.3",
+    "laravel-vite-plugin": "^1.0.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.0",
+    "vite": "^5.0.0",
+    "vue": "^3.2.31"
+  },
+  "dependencies": {
+    "chokidar": "^3.6.0",
+    "copy-to-clipboard": "^3.3.3",
+    "primevue": "^3.47.2",
+    "vue-honeypot": "^3.0.1",
+    "vue-toast-notification": "^3.1.2"
+  }
 }
